okta/v6/docs/PolicyAccountLinkFilterGroups.md
# PolicyAccountLinkFilterGroups

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Include** | Pointer to **[]string** | Specifies the allowlist of Group identifiers to match against. Group memberships are restricted to type &#x60;OKTA_GROUP&#x60;. | [optional] 

## Methods

### NewPolicyAccountLinkFilterGroups

`func NewPolicyAccountLinkFilterGroups() *PolicyAccountLinkFilterGroups`

NewPolicyAccountLinkFilterGroups instantiates a new PolicyAccountLinkFilterGroups object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewPolicyAccountLinkFilterGroupsWithDefaults

`func NewPolicyAccountLinkFilterGroupsWithDefaults() *PolicyAccountLinkFilterGroups`

NewPolicyAccountLinkFilterGroupsWithDefaults instantiates a new PolicyAccountLinkFilterGroups object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetInclude

`func (o *PolicyAccountLinkFilterGroups) GetInclude() []string`

GetInclude returns the Include field if non-nil, zero value otherwise.

### GetIncludeOk

`func (o *PolicyAccountLinkFilterGroups) GetIncludeOk() (*[]string, bool)`

GetIncludeOk returns a tuple with the Include field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetInclude

`func (o *PolicyAccountLinkFilterGroups) SetInclude(v []string)`

SetInclude sets Include field to given value.

### HasInclude

`func (o *PolicyAccountLinkFilterGroups) HasInclude() bool`

HasInclude returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


